--- a/index.html
+++ b/index.html
@@ -14,7 +14,22 @@
 </head>
 
 <body>
-    <h1>Hello Vegan World!</h1>
+    <header>Header content</header>
+    <section>
+        Main video or image
+    </section>
+    <section>
+        About the website and links to five yoga poses
+    </section>
+    <section>
+        Vegan life, image, description, uses, step by step x5
+    </section>
+    <section>
+        Contribute Form
+    </section>
+    <footer>
+        Social media links, copyright and contact info
+    </footer>
 </body>
 
 </html>
