--- a/index.html
+++ b/index.html
@@ -5,12 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
     <meta name="description" content="A Vegan website which details vegan information about vegan life style">
     <meta name="keywords" content="vegan, definition, motivation, priciple, practice, information">
 
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Mind Yoga</title>
+    <title>Vegan life</title>
 </head>
 
 <body>
