--- a/index.html
+++ b/index.html
@@ -13,12 +13,32 @@
 </head>
 
 <body>
-    <header>Header content</header>
+    <header>
+        <a href="index.html">
+            <h1>Vegan Life</h1>
+        </a>
+        <nav>
+            <ul>
+                <li>
+                    <a href="index.html">Home</a>
+                </li>
+                <li>
+                    <a href="#">About</a>
+                </li>
+                <li>
+                    <a href="#">Poses</a>
+                </li>
+                <li>
+                    <a href="#">Contribute</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
     <section>
         Main video or image
     </section>
     <section>
-        About the website and links to five yoga poses
+        About the website and links to five vegan life
     </section>
     <section>
         Vegan life, image, description, uses, step by step x5
