Added style to heading and logo.

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <header>
         <a href="index.html">
             <h1>Vegan Life</h1>
+            <h1 id="logo">Vegan Life</h1>
         </a>
         <nav>
             <ul>
@@ -26,10 +27,10 @@
                     <a href="#">About</a>
                 </li>
                 <li>
-                    <a href="#">Poses</a>
+                    <a href="#">Info</a>
                 </li>
                 <li>
-                    <a href="#">Contribute</a>
+                    <a href="#">Contact Us</a>
                 </li>
             </ul>
         </nav>
