Style navigation links.

--- a/index.html
+++ b/index.html
@@ -15,13 +15,12 @@
 <body>
     <header>
         <a href="index.html">
-            <h1>Vegan Life</h1>
             <h1 id="logo">Vegan Life</h1>
         </a>
-        <nav>
+        <nav id="menu">
             <ul>
                 <li>
-                    <a href="index.html">Home</a>
+                    <a href="index.html" class="active">Home</a>
                 </li>
                 <li>
                     <a href="#">About</a>
