Added a background image to the homepage, added nav anchor padding.

--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
         </nav>
     </header>
     <section>
-        Main video or image
+        <div id="vegan-image">
+            <source src="/assets/images/veganlife.jpg" alt="VivaVegan">
+        </div>
     </section>
     <section>
         About the website and links to five vegan life
