Added Vegan style image, and added border-radius bar links

--- a/index.html
+++ b/index.html
@@ -35,9 +35,7 @@
         </nav>
     </header>
     <section>
-        <div id="vegan-image">
-            <source src="/assets/images/veganlife.jpg" alt="VivaVegan">
-        </div>
+        <div id="vegan-image"></div>
     </section>
     <section>
         About the website and links to five vegan life
