Added cover text and styling Vegan Imgae.

--- a/index.html
+++ b/index.html
@@ -34,8 +34,11 @@
             </ul>
         </nav>
     </header>
-    <section>
+    <section id="vegan-outer">
         <div id="vegan-image"></div>
+        <div id="cover-text">
+            <h1>Metttere la frase Vegana</h1>
+        </div>
     </section>
     <section>
         About the website and links to five vegan life
