Added About section main structure and Image placeholder.

--- a/index.html
+++ b/index.html
@@ -37,11 +37,35 @@
     <section id="vegan-outer">
         <div id="vegan-image"></div>
         <div id="cover-text">
-            <h1>Metttere la frase Vegana</h1>
+            <h1>“Vegan is just pure love. Love for animals, love for the planet, and love for yourself.”</h1>
         </div>
     </section>
-    <section>
-        About the website and links to five vegan life
+    <section id="about-outer">
+        <div id="about-text">
+            <h1>About Vegan Life</h1>
+            <p>
+                Scrivere presentazione about vegan life
+            </p>
+        </div>
+        <div id="info-links">
+            <div>
+                <img src="/assets/images/veganlife1.jpg" alt="vegan life with white background and green write" class="veganlife1">
+                <h2>Motivation</h2>
+            </div>
+            <div>
+                <img src="/assets/images/veganlife1.jpg" alt="vegan life with white background and green write" class="veganlife1">
+                <h2>Principle</h2>
+            </div>
+            <div>
+                <img src="/assets/images/veganlife1.jpg" alt="vegan life with white background and green write" class="veganlife1">
+                <h2>Practice</h2>
+            </div>
+            <div>
+                <img src="/assets/images/veganlife1.jpg" alt="vegan life with white background and green write" class="veganlife1">
+                <h2>Famous</h2>
+            </div>
+        </div>
+        
     </section>
     <section>
         Vegan life, image, description, uses, step by step x5
