Added section main structure and image placeholder

--- a/index.html
+++ b/index.html
@@ -44,7 +44,10 @@
         <div id="about-text">
             <h1>About Vegan Life</h1>
             <p>
-                Scrivere presentazione about vegan life
+                Scrivere presentazione about vegan life, fhjsdklsadhjksdcbdcsadbsaldkjhsfahjdkfhsadfsd
+                sadfhsdjfksaldfhsadkjfhsadfjksahdfjkasdhfsjkdfhsdjlkfhasdlkjfhsadlfkjhasdflkjsahdflkjsadhfasdf
+                sadfhsdjfaskdlfjsdhfksadfhsalkdjfhsadkjfhasdfsa
+                dfsdhfsjdfkasldfjsadhflaskjfhsadljkfhald
             </p>
         </div>
         <div id="info-links">
