Styled motivation and principle section.

--- a/index.html
+++ b/index.html
@@ -121,32 +121,77 @@
             <div>
                 <img src="/assets/images/veganlife1.jpg" alt="vegan life with white background and green write" class="veganlife1">
                 <h4>
-                    <a href="#">Famous Vegan</a>
+                    <a href="#">Famous vegans</a>
                 </h4>
             </div>
         </div>
     </section>
     <section>
-        <div id="motivation-info ">
-            <div id="motivation-info-image ">
-                <img src="/assets/images/motivation.png" alt="Vegan motivation image">
+        <div class="motivation-content1">
+            <div class="motivation-image-left">
+                <div class="motivation-image-inner-left">
+                    <img src="/assets/images/motivation.png" alt="Vegan motivation image">
+                </div>
             </div>
-            <div id="motivation-info-text">
-                <h2>Motivation</h2>
-                <p>
-                    hgdfgdf
-                </p>
-                <ol>
-                    <li>ghfgddghfdgfg.</li>
-                    <li>gdfghfdgfdghfdg.</li>
-                    <li>dfghdfghdfgd.</li>
-                </ol>
+            <div class="motivation-text-right">
+                <div class="motivation-text-inner">
+                    <h2>Motivation</h2>
+                    <hr>
+                    <p>
+                        This standing posture can help improve your balance, as well as your postural and body awareness. In
+                        addition to its physical benefits, this pose can assist in calming and relaxing the mind relieving anxious
+                        thoughts and feelings.
+                    </p>
+                    <ol>
+                        <li>Start by standing straight with a long, tall back and your feet aligned and touching. Your arms should
+                            be straight along either side of your body.</li>
+                        <br>
+                        <li>Take a few breaths and find a place or object in the room to focus your attention. Slowly shift your
+                            weight to your left leg and begin to raise your right foot off the floor. Align the sole of your right
+                            foot with the inside of your left thigh. The toes should be pointing down and your pelvis should be
+                            completely straight.</li>
+                        <br>
+                        <li>Stretch your arms straight up toward the ceiling with palms pressed together forming an inverted V.</li>
+                    </ol>
+                </div>
             </div>
-        </div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
+            </div>
+            <div class="motivation-content2">
+                <div class="motivation-image-right">
+                    <div class="pose-image-inner-right">
+                        <img src="/assets/images/principles.png" alt="Vegan principlesimage">
+                    </div>
+                </div>
+                <div class="motivation-text-left">
+                    <div class="motivation-text-inner-left">
+                        <h2>Principles</h2>
+                        <hr>
+                        <p>
+                            This standing posture can help improve your balance, as well as your postural and body awareness. In
+                            addition to its physical benefits, this pose can assist in calming and relaxing the mind relieving
+                            anxious thoughts and feelings.
+                        </p>
+                        <ol>
+                            <li>Start by standing straight with a long, tall back and your feet aligned and touching. Your arms
+                                should be straight along either side of your body.</li>
+                            <br>
+                            <li>Take a few breaths and find a place or object in the room to focus your attention. Slowly shift your
+                                weight to your left leg and begin to raise your right foot off the floor. Align the sole of your
+                                right foot with the inside of your left thigh. The toes should be pointing down and your pelvis
+                                should be completely straight.</li>
+                            <br>
+                            <li>Stretch your arms straight up toward the ceiling with palms pressed together forming an inverted V.
+                            </li>
+                        </ol>
+                    </div>
+                </div>
+            </div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+           
+        
     </section>
     <section>
         Contribute Form
