Added some text in Motivation and Principles

--- a/index.html
+++ b/index.html
@@ -99,20 +99,14 @@
                     <h2>Motivation</h2>
                     <hr>
                     <p>
-                        This standing posture can help improve your balance, as well as your postural and body awareness. In
-                        addition to its physical benefits, this pose can assist in calming and relaxing the mind relieving anxious
-                        thoughts and feelings.
+                        dhfjdklsadfsd
                     </p>
                     <ol>
-                        <li>Start by standing straight with a long, tall back and your feet aligned and touching. Your arms should
-                            be straight along either side of your body.</li>
+                        <li>dfsdfhjsdlk.</li>
                         <br>
-                        <li>Take a few breaths and find a place or object in the room to focus your attention. Slowly shift your
-                            weight to your left leg and begin to raise your right foot off the floor. Align the sole of your right
-                            foot with the inside of your left thigh. The toes should be pointing down and your pelvis should be
-                            completely straight.</li>
+                        <li>dsfjskdf;asdfasfds.</li>
                         <br>
-                        <li>Stretch your arms straight up toward the ceiling with palms pressed together forming an inverted V.</li>
+                        <li>sadjasdkl;asdkf</li>
                     </ol>
                 </div>
             </div>
@@ -128,20 +122,14 @@
                         <h2>Principles</h2>
                         <hr>
                         <p>
-                            This standing posture can help improve your balance, as well as your postural and body awareness. In
-                            addition to its physical benefits, this pose can assist in calming and relaxing the mind relieving
-                            anxious thoughts and feelings.
+                            dsfjsadkas;dlfkjsadfsad.
                         </p>
                         <ol>
-                            <li>Start by standing straight with a long, tall back and your feet aligned and touching. Your arms
-                                should be straight along either side of your body.</li>
+                            <li>dfjsdkfl;sadfsa.</li>
                             <br>
-                            <li>Take a few breaths and find a place or object in the room to focus your attention. Slowly shift your
-                                weight to your left leg and begin to raise your right foot off the floor. Align the sole of your
-                                right foot with the inside of your left thigh. The toes should be pointing down and your pelvis
-                                should be completely straight.</li>
+                            <li>dsdfjksad;flsajdk;jasdfas.</li>
                             <br>
-                            <li>Stretch your arms straight up toward the ceiling with palms pressed together forming an inverted V.
+                            <li>sdjfsdkfasdl;fkjsdakflsa;dlfksajdf;as.
                             </li>
                         </ol>
                     </div>
