Added addictional motivation structure and form section back ground css

--- a/index.html
+++ b/index.html
@@ -99,14 +99,19 @@
                     <h2>Motivation</h2>
                     <hr>
                     <p>
-                        dhfjdklsadfsd
+                        This section explores the motivations behind questioning the exploitation of animals for various purposes such as food, clothing, health, and vanity, focusing on what prompts individuals to adopt a vegan lifestyle or embrace cruelty-free culture.
                     </p>
                     <ol>
-                        <li>dfsdfhjsdlk.</li>
+                        <li>Learning Process towards Veganism: Individuals typically progress from being vegetarian to becoming vegan.
+                            The process is rooted in individuals' personal meanings and how they fit into the world.
+                        </li>
                         <br>
-                        <li>dsfjskdf;asdfasfds.</li>
+                        <li>Childhood Influences: Motivations for veganism can trace back to childhood experiences, the conflicting message of loving some animals while consuming others often leads to a latent period, where individuals, 
+                            unable to make decisions during childhood, revisit these impressions later in life, potentially becoming vegetarians or vegans.</li>
                         <br>
-                        <li>sadjasdkl;asdkf</li>
+                        <li>Empathy and Ethical Considerations: The Empathy and ethicl,  plays a crucial role for individuals to adopt a plant-based diet.</li>
+                        <br>
+                        <li>These motivations often have their roots in childhood experiences and ethical reflections on the treatment of animals.</li>
                     </ol>
                 </div>
             </div>
@@ -139,9 +144,10 @@
             <div></div>
             <div></div>
             <div></div>
-           
-        
+
+
     </section>
+
     <section>
         Contribute Form
     </section>
