Added form section and famous, motivation, vegano, vegetatianismo images

--- a/index.html
+++ b/index.html
@@ -68,13 +68,13 @@
                 </h4>
             </div>
             <div>
-                <img src="/assets/images/veganlife1.jpg" alt="vegan life with white background and green write" class="veganlife1">
+                <img src="/assets/images/principles.png" alt="vegan life with white background and green write" class="veganlife1">
                 <h4>
-                    <a href="#">Principle</a>
+                    <a href="#">Principles</a>
                 </h4>
             </div>
             <div>
-                <img src="/assets/images/veganlife1.jpg" alt="vegan life with white background and green write" class="veganlife1">
+                <img src="/assets/images/vegetarianismo.jpg" alt="vegan life with white background and green write" class="veganlife1">
                 <h4>
                     <a href="#">Practice</a>
                 </h4>
@@ -115,44 +115,99 @@
                     </ol>
                 </div>
             </div>
-            </div>
-            <div class="motivation-content2">
-                <div class="motivation-image-right">
-                    <div class="pose-image-inner-right">
-                        <img src="/assets/images/principles.png" alt="Vegan principlesimage">
-                    </div>
+        </div>
+        <div class="motivation-content2">
+            <div class="motivation-image-right">
+                <div class="pose-image-inner-right">
+                    <img src="/assets/images/vegano.jpeg" alt="Vegan principlesimage">
                 </div>
+            </div>
                 <div class="motivation-text-left">
                     <div class="motivation-text-inner-left">
                         <h2>Principles</h2>
                         <hr>
                         <p>
-                            dsfjsadkas;dlfkjsadfsad.
+                            The principles of veganism, presented by Donald Watson, were published during the 11th Congress of the International 
+                            Vegetarian Union in the journal "The Vegan" by the Vegan Society in 1947.
                         </p>
                         <ol>
-                            <li>dfjsdkfl;sadfsa.</li>
+                            <li>Establishing a proper relationship between humans and the rest of the animals.</li>
                             <br>
-                            <li>dsdfjksad;flsajdk;jasdfas.</li>
+                            <li>Adopting a diet based on the fruits of the earth.</li>
                             <br>
-                            <li>sdjfsdkfasdl;fkjsdakflsa;dlfksajdf;as.
-                            </li>
+                            <li>Veganism has the potential to eliminate malnutrition and hunger worldwide.</li>
+                            <br>
+                            <li>Veganism could restore the fertility of arable soil.</li>
                         </ol>
                     </div>
                 </div>
             </div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-
-
+            <div class="motivation-content1">
+                <div class="motivation-image-left">
+                    <div class="motivation-image-inner-left">
+                        <img src="/assets/images/practice.jpg" alt="Vegan practice image">
+                    </div>
+                </div>
+                <div class="motivation-text-right">
+                    <div class="motivation-text-inner">
+                        <h2>Practice</h2>
+                        <hr>
+                        <p>The growing popularity of veganism is evident, with an increasing number of adherents motivated by ethical, environmental, or health considerations.</p>   
+                        <ol>
+                            <li>Vegans also from attending events involving animal exploitation for human entertainment, such as zoos, animal circuses, bullfighting, cockfighting, and animal-drawn vehicles. </li>
+                            <br>
+                            <li>The vegan lifestyle, driven by ethical principles, extends beyond a plant-based diet to avoiding animal-derived products such as wool, silk, leather, as well as beauty and cosmetic products tested on animals.</li>
+                            <br>
+                            <li>Legal developments in several countries recognise animals as sentient beings rather than mere property, marking a shift in legal perspectives on animal rights.</li>
+                            <br>
+                            <li>Market studies recognize the rising demand for meat substitutes, and the vegan lifestyle has gained attention in legal education, with animal rights courses offered at prominent institutions. </li>
+                        </ol>
+                    </div>
+                </div>
+            </div>             
+            <div class="motivation-content2">
+                <div class="motivation-image-right">
+                    <div class="pose-image-inner-right">
+                        <img src="/assets/images/famous.jpg" alt="Vegan principlesimage">
+                    </div>
+                </div>
+                    <div class="motivation-text-left">
+                        <div class="motivation-text-inner-left">
+                            <h2>Famous Vegetarian & Vegan</h2>
+                            <hr>
+                            <p>
+                                Numerous influential historical figures and contemporary celebrities have embraced veganism or vegetarianism, reflecting a diverse range of motivations. 
+                            </p>
+                            <ol>
+                                <li>Notable individuals in history, including Pitágoras, Nicolas Tesla, Leonardo da Vinci, Albert Einstein, Mahatma Gandhi, and Martin Luther King Jr., were known for following plant-based diets.</li>
+                                <br>
+                                <li>In contemporary times, public figures like Bill Clinton, Carl Lewis, Ozzy Osbourne, and Mike Tyson shifted towards vegan or almost-vegan diets for health reasons.</li>
+                                <br>
+                                <li>Personalities such as Ellen DeGeneres, Alicia Silverstone, and Dennis Kucinich adopted veganism after being moved by the documentary "Earthlings" shedding light on the suffering of animals in various industries.</li>
+                                <br>
+                                <li>Hollywood celebrities, including Miley Cyrus, Ariana Grande, Stella McCartney, Diane Keaton, Michelle Pfeiffer, Joaquin Phoenix, and Paul McCartney, have embraced vegan lifestyles, contributing to the growing awareness of ethical and health considerations associated with plant-based living.</li>
+                            </ol>
+                        </div>
+                    </div>
+                </div>            
     </section>
 
-    <section>
-        Contribute Form
-    </section>
+    <section id="form-outer">
+        <div id="myvideo">
+            <video autoplay muted loop>
+                    <source src="/assets/images/wavesvideo.mp4" type="video/mp4">
+            </video>
+            <form id=contribute-form>
+                <h2>Contribute Your Vegan Life</h2>
+                <label for="fname">First Name</label>
+                <input type="text" name="first_name" id="fname">
+            </form>
+            </div>
+        </section>
+   
+
     <footer>
-        Social media links, copyright and contact info
+        Social media icons
     </footer>
 </body>
 
