--- a/index.html
+++ b/index.html
@@ -195,15 +195,31 @@
     <section id="form-outer">
         <div id="myvideo">
             <video autoplay muted loop>
-                    <source src="/assets/images/wavesvideo.mp4" type="video/mp4">
+                    <source src="" type="video/mp4">
             </video>
-            <form id=contribute-form>
-                <h2>Contribute Your Vegan Life</h2>
-                <label for="fname">First Name</label>
-                <input type="text" name="first_name" id="fname">
-            </form>
-            </div>
-        </section>
+        </div>
+        <form id=contribute-form method="post" action="https://formdump.codeinstitute.net/">
+            <h3>Contribute to Vegan life</h3>
+            <label for="fullname">Full Name</label>
+            <br>
+            <input class="text-input" type="text" name="full_name" id="fullname" required placeholder="Full Name">
+            <br>
+            <label for="email">Email</label>
+            <br>
+            <input class="text-input" type="email" name="email" id="email" required placeholder="Email">
+            <br>
+            <label for="suggestion">Submit Suggestion</label>
+            <br>
+            <textarea name="suggestion" id="suggestion" cols="36" rows="5" placeholder="Please insert for suggested vegan life content here."></textarea>
+            <br>
+            <label for="checkbox">I would like to receive the Vegan Life email newsletter</label>
+            <input type="checkbox" id="checkbox" name="checkbox">
+            <br>
+            <input class="contribute-button" type="submit" value="Submit">
+
+        </form>
+
+    </section>
    
 
     <footer>
