Changed sizing o motivation,, principle, practice and famous images and changed motivation text div.

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 </div>
             </div>
             <div class="motivation-text-right">
-                <div class="motivation-text-inner">
+                <div class="motivation-text-inner-right">
                     <h2>Motivation</h2>
                     <hr>
                     <p>
@@ -149,7 +149,7 @@
                     </div>
                 </div>
                 <div class="motivation-text-right">
-                    <div class="motivation-text-inner">
+                    <div class="motivation-text-inner-right">
                         <h2>Practice</h2>
                         <hr>
                         <p>The growing popularity of veganism is evident, with an increasing number of adherents motivated by ethical, environmental, or health considerations.</p>   
