Update media rules of About section to remove fixed height.

--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
                 </h4>
             </div>
         </div>
+        <div class="clear-both"></div>
     </section>
     <section>
         <div class="motivation-content1">
@@ -142,54 +143,7 @@
                     </div>
                 </div>
             </div>
-            <div class="motivation-content1">
-                <div class="motivation-image-left">
-                    <div class="motivation-image-inner-left">
-                        <img src="/assets/images/practice.jpg" alt="Vegan practice image">
-                    </div>
-                </div>
-                <div class="motivation-text-right">
-                    <div class="motivation-text-inner-right">
-                        <h2>Practice</h2>
-                        <hr>
-                        <p>The growing popularity of veganism is evident, with an increasing number of adherents motivated by ethical, environmental, or health considerations.</p>   
-                        <ol>
-                            <li>Vegans also from attending events involving animal exploitation for human entertainment, such as zoos, animal circuses, bullfighting, cockfighting, and animal-drawn vehicles. </li>
-                            <br>
-                            <li>The vegan lifestyle, driven by ethical principles, extends beyond a plant-based diet to avoiding animal-derived products such as wool, silk, leather, as well as beauty and cosmetic products tested on animals.</li>
-                            <br>
-                            <li>Legal developments in several countries recognise animals as sentient beings rather than mere property, marking a shift in legal perspectives on animal rights.</li>
-                            <br>
-                            <li>Market studies recognize the rising demand for meat substitutes, and the vegan lifestyle has gained attention in legal education, with animal rights courses offered at prominent institutions. </li>
-                        </ol>
-                    </div>
-                </div>
-            </div>             
-            <div class="motivation-content2">
-                <div class="motivation-image-right">
-                    <div class="pose-image-inner-right">
-                        <img src="/assets/images/famous.jpg" alt="Vegan principlesimage">
-                    </div>
-                </div>
-                    <div class="motivation-text-left">
-                        <div class="motivation-text-inner-left">
-                            <h2>Famous Vegetarian & Vegan</h2>
-                            <hr>
-                            <p>
-                                Numerous influential historical figures and contemporary celebrities have embraced veganism or vegetarianism, reflecting a diverse range of motivations. 
-                            </p>
-                            <ol>
-                                <li>Notable individuals in history, including Pitágoras, Nicolas Tesla, Leonardo da Vinci, Albert Einstein, Mahatma Gandhi, and Martin Luther King Jr., were known for following plant-based diets.</li>
-                                <br>
-                                <li>In contemporary times, public figures like Bill Clinton, Carl Lewis, Ozzy Osbourne, and Mike Tyson shifted towards vegan or almost-vegan diets for health reasons.</li>
-                                <br>
-                                <li>Personalities such as Ellen DeGeneres, Alicia Silverstone, and Dennis Kucinich adopted veganism after being moved by the documentary "Earthlings" shedding light on the suffering of animals in various industries.</li>
-                                <br>
-                                <li>Hollywood celebrities, including Miley Cyrus, Ariana Grande, Stella McCartney, Diane Keaton, Michelle Pfeiffer, Joaquin Phoenix, and Paul McCartney, have embraced vegan lifestyles, contributing to the growing awareness of ethical and health considerations associated with plant-based living.</li>
-                            </ol>
-                        </div>
-                    </div>
-                </div>            
+             
     </section>
 
     <section id="form-outer">
