Cleaned up css for motivation section and added media queries for motivation section.

--- a/index.html
+++ b/index.html
@@ -89,14 +89,14 @@
         <div class="clear-both"></div>
     </section>
     <section>
-        <div class="motivation-content1">
-            <div class="motivation-image-left">
-                <div class="motivation-image-inner-left">
+        <div class="pose-content-wrapper green-background">
+            <div class="column left">
+                <div class="content-image">
                     <img src="/assets/images/motivation.png" alt="Vegan motivation image">
                 </div>
             </div>
-            <div class="motivation-text-right">
-                <div class="motivation-text-inner-right">
+            <div class="column right">
+                <div class="content-text-right">
                     <h2>Motivation</h2>
                     <hr>
                     <p>
@@ -116,15 +116,16 @@
                     </ol>
                 </div>
             </div>
+            <div class="clear-both"></div>
         </div>
-        <div class="motivation-content2">
-            <div class="motivation-image-right">
-                <div class="pose-image-inner-right">
+        <div class="pose-content-wrapper">
+            <div class="column right">
+                <div class="content-image">
                     <img src="/assets/images/vegano.jpeg" alt="Vegan principlesimage">
                 </div>
             </div>
-                <div class="motivation-text-left">
-                    <div class="motivation-text-inner-left">
+            <div class="column left">
+                <div class="content-text-left">
                         <h2>Principles</h2>
                         <hr>
                         <p>
@@ -142,6 +143,7 @@
                         </ol>
                     </div>
                 </div>
+                <div class="clear-both"></div>
             </div>
              
     </section>
