Change images file paths from absolute to relative.

--- a/index.html
+++ b/index.html
@@ -62,25 +62,25 @@
         </div>
         <div id="info-links">
             <div>
-                <img src="/assets/images/veganlife1.jpg" alt="vegan life with white background and green write" class="veganlife1">
+                <img src="assets/images/veganlife1.jpg" alt="vegan life with white background and green write" class="veganlife1">
                 <h4>
                     <a href="#">Motivation</a>
                 </h4>
             </div>
             <div>
-                <img src="/assets/images/principles.png" alt="vegan life with white background and green write" class="veganlife1">
+                <img src="assets/images/principles.png" alt="vegan life with white background and green write" class="veganlife1">
                 <h4>
                     <a href="#">Principles</a>
                 </h4>
             </div>
             <div>
-                <img src="/assets/images/vegetarianismo.jpg" alt="vegan life with white background and green write" class="veganlife1">
+                <img src="assets/images/vegetarianismo.jpg" alt="vegan life with white background and green write" class="veganlife1">
                 <h4>
                     <a href="#">Practice</a>
                 </h4>
             </div>
             <div>
-                <img src="/assets/images/veganlife1.jpg" alt="vegan life with white background and green write" class="veganlife1">
+                <img src="assets/images/veganlife1.jpg" alt="vegan life with white background and green write" class="veganlife1">
                 <h4>
                     <a href="#">Famous vegans</a>
                 </h4>
@@ -92,7 +92,7 @@
         <div class="pose-content-wrapper green-background">
             <div class="column left">
                 <div class="content-image">
-                    <img src="/assets/images/motivation.png" alt="Vegan motivation image">
+                    <img src="assets/images/motivation.png" alt="Vegan motivation image">
                 </div>
             </div>
             <div class="column right">
@@ -121,7 +121,7 @@
         <div class="pose-content-wrapper">
             <div class="column right">
                 <div class="content-image">
-                    <img src="/assets/images/vegano.jpeg" alt="Vegan principlesimage">
+                    <img src="assets/images/vegano.jpeg" alt="Vegan principlesimage">
                 </div>
             </div>
             <div class="column left">
