Added media queries for tablet, added anchor kinks ti images.

--- a/index.html
+++ b/index.html
@@ -69,27 +69,35 @@
         </div>
         <div id="info-links">
             <div>
-                <img src="assets/images/veganlife1.jpg" alt="vegan life with white background and green write" class="veganlife1">
+                <a href="#poses-nav-target">
+                <img src="assets/images/veganlife1.jpg" alt="vegan life with white background and green write" class="vegan-images">
+                </a>    
                 <h4>
-                    <a href="poses-nav-target">Motivation</a>
+                    <a href="#poses-nav-target">Motivation</a>
                 </h4>
             </div>
             <div>
-                <img src="assets/images/principles.png" alt="vegan life with white background and green write" class="veganlife1">
+                <a href="#grief-target">
+                <img src="assets/images/principles.png" alt="vegan life with white background and green write" class="vegan-images">
                 <h4>
-                    <a href="principles-target">Principles</a>
+                </a>
+                    <a href="grief-target">Principles</a>
                 </h4>
             </div>
             <div>
-                <img src="assets/images/vegetarianismo.jpg" alt="vegan life with white background and green write" class="veganlife1">
+                <a href="#trauma-target">
+                <img src="assets/images/vegetarianismo.jpg" alt="vegan life with white background and green write" class="vegan-images">
                 <h4>
-                    <a href="practice-target">Practice</a>
+                </a>    
+                    <a href="trauma-target">Practice</a>
                 </h4>
             </div>
             <div>
-                <img src="assets/images/veganlife1.jpg" alt="vegan life with white background and green write" class="veganlife1">
+                <a href="#stress-target">
+                <img src="assets/images/veganlife1.jpg" alt="vegan life with white background and green write" class="vegan-images">
                 <h4>
-                    <a href="famous-target">Famous vegans</a>
+                </a>    
+                    <a href="stress-target">Famous vegans</a>
                 </h4>
             </div>
         </div>
@@ -207,7 +215,7 @@
 
     <section id="form-outer">
         <span id="form-nav-target" class="spacing-under-nav"></span>
-        <div id="myvideo">
+        <div>
             <video autoplay muted loop>
                     <source src="" type="video/mp4">
             </video>
@@ -219,10 +227,11 @@
             <label for="email">Email</label>
             <input class="text-input" type="email" name="email" id="email" required placeholder="Email">
             <label for="suggestion">Submit Suggestion</label>
-            <textarea name="suggestion" id="suggestion" cols="45" rows="5"
-                placeholder="Please insert for suggested vegan life content here"></textarea>
-            <label for="checkbox">I would like to receive the Vegan Life email newsletter</label>
+            <textarea name="suggestion" id="suggestion" placeholder="Please insert for suggested yoga content here"></textarea>  
+            <p>
             <input type="checkbox" id="checkbox" name="checkbox">
+            <label for="checkbox">I would like to receive the MindYoga email newsletter</label>
+            </p>
             <input class="contribute-button" type="submit" value="Submit">
 
         </form>
