--- a/index.html
+++ b/index.html
@@ -26,13 +26,16 @@
                     <a href="about-nav-target">About</a>
                 </li>
                 <li class="dropdown">
-                    <a href="about-nav-target">Info</a>
+                    <a href="#poses-nav-target">Info</a>
                     <div class="dropdown-content">
                         <a href="#anxiety-target">Motivation</a>
                         <a href="#grief-target">Principles</a>
                         <a href="#trauma-target">Practice</a>
                         <a href="#stress-target">Famous Vegetarian $ Vegan</a>
                     </div>
+                </li>
+                <li>
+                    <a href="#">Practice</a>
                 </li>
                 <li>
                     <a href="about-nav-target">Contact Us</a>
@@ -206,11 +209,19 @@
                         <li>Personalities such as Ellen DeGeneres, Alicia Silverstone, and Dennis Kucinich adopted veganism after being moved by the documentary "Earthlings" shedding light on the suffering of animals in various industries.</li>
                         <li>Hollywood celebrities, including Miley Cyrus, Ariana Grande, Stella McCartney, Diane Keaton, Michelle Pfeiffer, Joaquin Phoenix, and Paul McCartney, have embraced vegan lifestyles, contributing to the growing awareness of ethical and health considerations associated with plant-based living.</li>
                     </ol>
-                    </div>
                 </div>
-                <div class="clear-both"></div>
             </div>
+        <div class="clear-both"></div>
+    </div>
              
+    </section>
+    <section id="map-outer">
+        <div>
+            <h2>Find a Vegan Life Place Near You</h2>
+        </div>
+        <div id="map-inner">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d19054.859447005085!2d-6.268731998762189!3d53.34580825468117!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1syoga%20studio!5e0!3m2!1sen!2sie!4v1639515875102!5m2!1sen!2sie" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        </div>
     </section>
 
     <section id="form-outer">
@@ -227,10 +238,10 @@
             <label for="email">Email</label>
             <input class="text-input" type="email" name="email" id="email" required placeholder="Email">
             <label for="suggestion">Submit Suggestion</label>
-            <textarea name="suggestion" id="suggestion" placeholder="Please insert for suggested yoga content here"></textarea>  
+            <textarea name="suggestion" id="suggestion" placeholder="Please insert for suggested vegan life content here."></textarea>  
             <p>
             <input type="checkbox" id="checkbox" name="checkbox">
-            <label for="checkbox">I would like to receive the MindYoga email newsletter</label>
+            <label for="checkbox">I would like to receive the Vegan Life email newsletter</label>
             </p>
             <input class="contribute-button" type="submit" value="Submit">
 
