Added bar shadow to drop down nav and added styling to text.

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     </div>
                 </li>
                 <li>
-                    <a href="#">Practice</a>
+                    <a href="#map-target">Practice</a>
                 </li>
                 <li>
                     <a href="about-nav-target">Contact Us</a>
@@ -118,7 +118,7 @@
             </div>
             <div class="column right">
                 <div class="content-text-right">
-                    <h2>Motivation</h2>
+                    <h3>Motivation</h3>
                     <hr>
                     <p>
                         This section explores the motivations behind questioning the exploitation of animals for various purposes such as food, clothing, health, and vanity, focusing on what prompts individuals to adopt a vegan lifestyle or embrace cruelty-free culture.
@@ -148,7 +148,7 @@
             </div>
             <div class="column left">
                 <div class="content-text-left">
-                    <h2>Principles</h2>
+                    <h3>Principles</h3>
                     <hr>
                     <p>
                         The principles of veganism, presented by Donald Watson, were published during the 11th Congress of the International 
@@ -173,7 +173,7 @@
             </div>
             <div class="column right">
                 <div class="content-text-right">
-                    <h2>Practice</h2>
+                    <h3>Practice</h3>
                     <hr>
                     <p>
                         The growing popularity of veganism is evident, with an increasing number of adherents motivated 
@@ -198,7 +198,7 @@
             </div>
             <div class="column left">
                 <div class="content-text-left">
-                    <h2>Famous Vegetarian and Vegan</h2>
+                    <h3>Famous Vegetarian and Vegan</h3>
                     <hr>
                     <p>
                         Numerous influential historical figures and contemporary celebrities have embraced veganism or vegetarianism, reflecting a diverse range of motivations. 
@@ -216,6 +216,7 @@
              
     </section>
     <section id="map-outer">
+        <span id="map-target" class="spacing-under-nav"></span>
         <div>
             <h2>Find a Vegan Life Place Near You</h2>
         </div>
