--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <a href="index.html">Home</a>
                 </li>
                 <li>
-                    <a href="about-nav-target">About</a>
+                    <a href="#about-nav-target">About</a>
                 </li>
                 <li class="dropdown">
                     <a href="#poses-nav-target">Info</a>
@@ -35,10 +35,10 @@
                     </div>
                 </li>
                 <li>
-                    <a href="#map-target">Practice</a>
+                    <a href="#map-target">Find Us</a>
                 </li>
                 <li>
-                    <a href="about-nav-target">Contact Us</a>
+                    <a href="#contribute-form">Contact Us</a>
                 </li>
             </ul>
         </nav>
@@ -80,11 +80,11 @@
                 </h4>
             </div>
             <div>
-                <a href="#grief-target">
+                <a href="#grief-target"">
                 <img src="assets/images/principles.png" alt="vegan life with white background and green write" class="vegan-images">
                 <h4>
                 </a>
-                    <a href="grief-target">Principles</a>
+                    <a href="#grief-target">Principles</a>
                 </h4>
             </div>
             <div>
@@ -92,7 +92,7 @@
                 <img src="assets/images/vegetarianismo.jpg" alt="vegan life with white background and green write" class="vegan-images">
                 <h4>
                 </a>    
-                    <a href="trauma-target">Practice</a>
+                    <a href="#trauma-target">Practice</a>
                 </h4>
             </div>
             <div>
@@ -100,7 +100,7 @@
                 <img src="assets/images/veganlife1.jpg" alt="vegan life with white background and green write" class="vegan-images">
                 <h4>
                 </a>    
-                    <a href="stress-target">Famous vegans</a>
+                    <a href="#stress-target">Famous vegans</a>
                 </h4>
             </div>
         </div>
@@ -221,7 +221,7 @@
             <h2>Find a Vegan Life Place Near You</h2>
         </div>
         <div id="map-inner">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d19054.859447005085!2d-6.268731998762189!3d53.34580825468117!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1syoga%20studio!5e0!3m2!1sen!2sie!4v1639515875102!5m2!1sen!2sie" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d19054.859447005085!2d-6.268731998762189!3d53.34580825468117!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1svegan%20restaurant!5e0!3m2!1sen!2sie!4v1639515875102!5m2!1sen!2sie" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         </div>
     </section>
 
