--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
                 <li class="dropdown">
                     <a href="#poses-nav-target">Info</a>
                     <div class="dropdown-content">
-                        <a href="#anxiety-target">Motivation</a>
-                        <a href="#grief-target">Principles</a>
-                        <a href="#trauma-target">Practice</a>
-                        <a href="#stress-target">Fomous</a>
+                        <a href="#motivation-target">Motivation</a>
+                        <a href="#principles-target">Principles</a>
+                        <a href="#practice-target">Practice</a>
+                        <a href="#famous-target">Famous</a>
                     </div>
                 </li>
                 <li>
@@ -86,35 +86,35 @@
         </div>
         <div id="info-links">
             <div>
-                <a href="#anxiety-target">
+                <a href="#motivation-target">
                 <img src="assets/images/veganlife1.jpg" alt="vegan life with white background and green write" class="vegan-images">
                 </a>    
                 <h3>
-                    <a href="#anxiety-target">Motivation</a>
+                    <a href="#motivation-target">Motivation</a>
                 </h3>
             </div>
             <div>
-                <a href="#grief-target"">
+                <a href="#principles-target"">
                 <img src="assets/images/principles.png" alt="vegan life with white background and green write" class="vegan-images">
                 <h3>
                 </a>
-                    <a href="#grief-target">Principles</a>
+                    <a href="#principles-target">Principles</a>
                 </h3>
             </div>
             <div>
-                <a href="#trauma-target">
+                <a href="#practice-target">
                 <img src="assets/images/vegetarianismo.jpg" alt="vegan life with white background and green write" class="vegan-images">
                 <h3>
                 </a>    
-                    <a href="#trauma-target">Practice</a>
+                    <a href="#practice-target">Practice</a>
                 </h3>
             </div>
             <div>
-                <a href="#stress-target">
+                <a href="#famous-target">
                 <img src="assets/images/veganlife1.jpg" alt="vegan life with white background and green write" class="vegan-images">
                 <h3>
                 </a>    
-                    <a href="#stress-target">Famous Veg</a>
+                    <a href="#famous-target">Famous Veg</a>
                 </h3>
             </div>
         </div>
@@ -131,7 +131,7 @@
             <div class="pose-content-wrapper">
                 <h2 id="poses-header">Vegan Life</h2>
                 <hr>
-                <div id="anxiety-target" class="spacing-under-nav"></div>
+                <div id="motivation-target" class="spacing-under-nav"></div>
                 <div class="column left">
                     <div class="content-image">
                         <img src="assets/images/motivation.png" alt="Vegan Life">
@@ -162,7 +162,7 @@
         </div>
     </div>
     <div class="pose-content-wrapper">
-        <div id="grief-target" class="spacing-under-nav"></div>
+        <div id="principles-target" class="spacing-under-nav"></div>
         <div class="column right">
             <div class="content-image">
                     <img src="assets/images/vegano.jpeg" alt="Vegano Image">
@@ -188,7 +188,7 @@
         </div>
         <div class="green-background">
             <div class="pose-content-wrapper">
-                <div id="trauma-target" class="spacing-under-nav"></div>
+                <div id="practice-target" class="spacing-under-nav"></div>
                 <div class="column left">
                     <div class="content-image">
                     <img src="assets/images/practice.jpg" alt="practice image">
@@ -213,7 +213,7 @@
             <div class="clear-both"></div>
         </div>
         <div class="pose-content-wrapper">
-            <div id="stress-target" class="spacing-under-nav"></div>
+            <div id="famous-target" class="spacing-under-nav"></div>
             <div class="column right">
                 <div class="content-image">
                     <img src="assets/images/famous.jpg" alt="Vegano Image">
